responsive carousel, fixing width on mobile and desktop

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -54,17 +54,11 @@ button {
     z-index: 100;
 }
 
-.components_wrapper {
-    margin-top: 100vh;
-    position: relative;
-    margin: 2rem 0;
-    padding: 1rem 2rem;
-    background-color: #41b3a3;
-    border-radius: 3px;
-    box-shadow: 1px 4px 2px 1px rgba(0,0,0,0.335);
-}
-
 section {
-    width: 100%;
-    min-height: 600px;
+    margin: 0 auto;
+    width: 90%;
+
+    @media screen and (min-width: 768px) {
+        width: 60%;
+    }
 }
